# SherlockDistribution

./: LICENSE  README.md  setup.py
SherlockDistribution/: Binomialdistribution.py  README.md  license.txt  setup.cfg
