[metadata]
name = SherlockDistribution
author = Swapnil Jha
author-email = swapniljha001@gmail.com
description = Gaussian and Binomial distributions
long-description = This is a simple package to be able to initialize and use Gaussian and Binomial Distributions. This package also defines magic methods to enable the user to add two or more distributions.
description-file = README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
packages = SherlockDistribution
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

[options.extras_require]
dev =
    docutils